* fix problem with fading * hide gmap on narrow devices

--- a/30/css/header.css
+++ b/30/css/header.css
@@ -5,7 +5,11 @@ header {
 }
 
 .headerSection {
-    font-size: 5pt;
+    font-size: 10px;
+}
+
+.theName {
+    letter-spacing: 4px;
 }
 
 nav > div {
